--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
     </nav>
 
     <main>
+      <img src="Images/img1.png" alt="mulher ao lado de notebook cinza" />
       <section>
-        <img src="Images/img1.png" alt="mulher ao lado de notebook cinza" />
-
         <h1>Seus dados estão <strong>protegidos</strong>?</h1>
         <p>
-          A informação é fundamental e de extrema importância para qualquer
-          empresa.
-          <br />
-          Aqui vai um texto como se fosse uma empresa de segurança da informação
+          A informação é fundamental e de
+          <strong>extrema importância</strong> para qualquer empresa.
+        </p>
+        <br />
+        <p>
+          Aqui vai um <strong>texto</strong> como se fosse uma empresa de
+          <span>segurança da informação</span>
           apresentando o seu produto e com o texto todo estilizado.
         </p>
       </section>
