--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
       </section>
     </main>
     <footer>
+      <hr>
       para mais informações nos siga no instagram
       <a href="https://www.instagram.com/rocketseat/" target="_blank"
         >@rocketsect</a
       >
+      <img id="icone"src="Images/padlock.svg" alt="Ícone de cadeado branco e verde trancado">
     </footer>
   </body>
 </html>
